--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,11 @@
 </head>
 <body>
   <div class="container">
-    <h1><%= @title %></h1>
+    <% @bread_crumbs.each do |e| %>
+      <%= link_to e[0], e[1] %>
+      <%= ' >> ' %>
+    <% end %>
+    <h1 style="display:inline"><%= @title %></h1>
     <hr>
     <%= yield %>
   </div>
