--- a/app/assets/stylesheets/plan_days.css.scss
+++ b/app/assets/stylesheets/plan_days.css.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the plans controller here.
+// Place all the styles related to the plan_days controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-div.field_with_errors {
-  display: inline;
-}
