--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -1,43 +1,25 @@
-<%= form_for @plan do |t| %>
-  <h2><%= @plan.new_record? ? '新建计划' : '修改计划' %></h2>
-  <div class="control-group">
-    <label class="inline">
-      名称
-      <%= t.text_field :name %>
-    </label>
-  </div>
-  <div class="control-group">
-    <label class="inline">
-      开始日期
-      <%= t.text_field :start_date %>
-    </label>
-  </div>
-  <div class="control-group">
-    <label class="inline">
-      任务数
-      <%= t.text_field :task_count %>
-    </label>
-  </div>
-  <div class="control-group">
-    <label class="inline">
-      复习计划
-      <%= t.text_field :review_plan %>
-    </label>
-  </div>
-  <div class="control-group">
-    <label class="inline">
-      每日最多任务数
-      <%= t.text_field :max_task_per_day %>
-    </label>
-  </div>
-  <div class="control-group">
-    <label class="inline">
-      每人最多新任务数
-      <%= t.text_field :max_new_task_per_day %>
-    </label>
-  </div>
+<%= form_for @plan, :html=>{:class=>'form-horizontal'} do |t| %>
+  <fieldset>
+    <legend><%= @plan.new_record? ? '新建计划' : '修改计划' %></legend>
+    <%= render 'share/text_field', :t=>t, :obj=>@plan, :name=>:name, :label=>'名称' %>
+    <%= render 'share/text_field', :t=>t, :obj=>@plan, :name=>:start_date, :label=>'开始日期' %>
+    <%= render 'share/text_field', :t=>t, :obj=>@plan, :name=>:task_count, :label=>'任务数' %>
+    <%= render 'share/text_field', :t=>t, :obj=>@plan, :name=>:review_plan, :label=>'复习计划' %>
+    <%= render 'share/text_field', :t=>t, :obj=>@plan, :name=>:max_task_per_day, :label=>'每日最多任务数' %>
+    <%= render 'share/text_field', :t=>t, :obj=>@plan, :name=>:max_new_task_per_day, :label=>'每日最多新任务数' %>
+    <div class="control-group">
+      <label class="control-label">说明</label>
+      <div class="controls">
+        <%= t.text_area :description, :size=>'60x8', :style=>"width:500px;" %>
+      </div>
+    </div>
 
-  <button type="submit" class="btn">提交</button>
-  <%= link_to '返回', trades_path%>
+    <div class="control-group">
+      <div class="controls">
+        <button type="submit" class="btn">提交</button>
+        <%= link_to '返回', plans_path%>
+      </div>
+    </div>
+  </fieldset>
 <%end%>
 
