--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -1,3 +1,5 @@
+<%= link_to '修改', edit_plan_path(@plan) %>
+<%= link_to '返回', plans_path %>
 <table class="table table-bordered">
   <tr>
     <th>名称</th>
