search plan by day

--- a/app/views/plan_days/edit.html.erb
+++ b/app/views/plan_days/edit.html.erb
@@ -25,11 +25,11 @@
         <%= t.text_field :finish_task %>
       </div>
     </div>
-
+    <%= hidden_field_tag 'return_to', request.referer %>
     <div class="control-group">
       <div class="controls">
         <button type="submit" class="btn">提交</button>
-        <%= link_to '返回', plan_path(@plan_day.plan)%>
+        <%= link_to '返回', request.referer %>
       </div>
     </div>
   </fieldset>
