--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -1,43 +1,4 @@
 <%= link_to '修改', edit_plan_path(@plan) %>
 <%= link_to '返回', plans_path %>
-<table class="table table-bordered">
-  <tr>
-    <th>名称</th>
-    <th>开始日期</th>
-    <th>所需天数</th>
-    <th>任务数</th>
-    <th>复习计划</th>
-    <th>每日最多任务数</th>
-    <th>每日最多新任务数</th>
-  </tr>
-  <tr>
-    <td><%= @plan.name %></td>
-    <td><%= @plan.start_date %></td>
-    <td><%= @plan.plan_days.count %></td>
-    <td><%= @plan.task_count %></td>
-    <td><%= @plan.review_plan %></td>
-    <th><%= @plan.max_task_per_day %></th>
-    <th><%= @plan.max_new_task_per_day %></th>
-  </tr>
-</table>
-<pre>
-<%= @plan.description %>
-</pre>
-<table class="table table-bordered">
-  <tr>
-    <th>日期</th>
-    <th>新任务</th>
-    <th>任务</th>
-    <th>完成任务</th>
-    <th></th>
-  </tr>
-  <% @plan.plan_days.each do |e| %>
-    <tr class="<%= 'success' if e.is_done == 'y' %>">
-      <td><%= e.task_date%></td>
-      <td><%= e.new_task%></td>
-      <td><%= e.task%></td>
-      <td><%= e.finish_task%></td>
-      <td><%= link_to '修改', edit_plan_day_path(e) %></td>
-    </tr>
-  <% end %>
-</table>
+<%= render 'show', :plan=>@plan, :plan_days=>@plan.plan_days %>
+
