--- a/app/views/plans/_show.html.erb
+++ b/app/views/plans/_show.html.erb
@@ -28,14 +28,16 @@
     <th>新任务</th>
     <th>任务</th>
     <th>完成任务</th>
+    <th>说明</th>
     <th></th>
   </tr>
   <% plan_days.each do |e| %>
     <tr class="<%= 'success' if e.is_done == 'y' %>">
-      <td><%= e.task_date%></td>
-      <td><%= e.new_task%></td>
-      <td><%= e.task%></td>
-      <td><%= e.finish_task%></td>
+      <td><%= e.task_date %></td>
+      <td><%= e.new_task %></td>
+      <td><%= e.task %></td>
+      <td><%= e.finish_task %></td>
+      <td><%= e.note %></td>
       <td><%= link_to '修改', edit_plan_day_path(e) %></td>
     </tr>
   <% end %>
